package it.matlice.ingsw.controller;

public enum InfoType {
    BEEN_SELECTED_INFO,
    NEW_MESSAGES_INFO,
    YOUR_OFFERS_INFO,
    YOUR_OFFERS_FROM_CATEGORY_INFO,
    PLACES_INFO,
    DATES_INFO,
    HOURS_INFO
}
