package it.matlice.ingsw.view;

public interface IMessage {
    void show();
}
